--- a/src/main/webapp/dev/css/style.css
+++ b/src/main/webapp/dev/css/style.css
@@ -136,6 +136,10 @@ a:hover{
 	color: #333;
 	border-bottom: solid 1px #e1e1e1 !important;
 	font-size:1.2rem;
+	word-break:keep-all;
+	white-space:nowrap;
+	overflow:hidden;
+	text-overflow:ellipsis;
 }
 .nav_submenu dl dd a:hover{
 	padding:0;
