--- a/src/main/webapp/dev/css/reset.css
+++ b/src/main/webapp/dev/css/reset.css
@@ -143,7 +143,7 @@ content:"";display:block;overflow:hidden;clear:both;
 }
 
 @font-face {font-family: "iconfont";
-  src: url('../font/iconfont.ttf') format('truetype');
+  src: url('../iconfont/iconfont.ttf') format('truetype');
 }
 
 .iconfont {
