--- a/src/main/webapp/dev/include/footer.html
+++ b/src/main/webapp/dev/include/footer.html
@@ -91,12 +91,12 @@
 	<div class="footer_bottom">版权所有 10085</div>
 </div>
 
-	<script type="text/javascript" src="../js/common/jquery-backtop.js"></script>
-	<!-- 导航跟随固定 --> 
+	<!--<script type="text/javascript" src="../js/common/jquery-backtop.js"></script>
+	 导航跟随固定  
 	<script type="text/javascript">
 		var offs=$('#fixed').offset();
 		$(window).scroll(function(){
 			scrollLis();
 		});
 		
-	</script>
+	</script>-->
